# honeycomb-

./: .env copy.example  .env.example  .gitignore  Cargo.toml
.honeycomb/tasks/: task_34664.json
docs/: README.md  architecture.md
docs/specs/: architecture-reflection-record.md  architecture-review-and-guardrails.md  architecture-review-record.md  audit-and-trace.md  bee-runtime-hive-ecology-architecture.md  binary-and-deployment-layout.md  convergence-review-and-roadmap.md  current-capability-audit-and-aggressive-convergence.md  debug-and-inspection-tools.md  design-status.md  domain-boundaries.md  ecosystem-composite-hives.md  evolution-code-module-mapping.md  evolution-governance.md  evolution-plane-implementation-roadmap.md  evolution-registry-integration.md  evolution-system.md  execution-code-module-mapping.md  execution-evolution-data-examples.md  execution-plane-implementation-roadmap.md  execution-state-machines-and-idempotency.md  execution-vs-evolution-plane.md  failure-recovery.md  fitness-and-promotion.md  hive-spec.md  implementation-spec.md  import-export-workflow.md  manual-intervention-and-approval-workflow.md  memory-context-and-llm-roles.md  migration-cutover-plan.md  multi-tenant-model.md  multi-user-model.md  node-identity.md  observability-and-replay.md  permission-and-visibility.md  practice-profile.md  process-executor.md  queen-worker-model.md  queen-worker-protocol-examples.md  queen-worker-protocol.md  (+18 more)
evolution/audit/: audit.jsonl
evolution/fitness/: impl-xhs-v1.json  impl-xhs-v2.json  (+1 more)
prompts/: code-assistant.md
src/: lib.rs  main.rs
(+164 files in other folders)
