[package]
name = "honeycomb"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "honeycomb"
path = "src/bin/honeycomb.rs"

[[bin]]
name = "honeycomb-evolution"
path = "src/bin/honeycomb-evolution.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
